# pc_semestralka

./: CMakeLists.txt  dalsi.lp  file.c  file.h  haha.txt  idk.txt  idklib.c  idklib.h  input.lp  lp  lp.c  lp.h  main.c  makefile  makefile.win  out.txt  parse.c  parse.h  stack.c  stack.h  test.lp  test19.lp  unbounded.lp  validate.c  validate.h  validator.lp  vstup.lp  vysledek.txt
Bounds/: bounds.c  bounds.h
Consts/: constants.h  error_codes.h
File/: file.c  file.h
Generals/: generals.c  generals.h
LP/: lp.c  lp.h
LProblem/: lp.c  lp.h
Memory_manager/: memory_manager.c  memory_manager.h
Objectives/: objectives.c  objectives.h
Parse/: parse.c  parse.h
Section_buffer/: section_buffer.c  section_buffer.h
Subject_to/: subject_to.c  subject_to.h
Validate/: validate.c  validate.h
ajaj/: parse.c  parse.h
